<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
	    android:id="@+id/mybtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="22dp"
	    android:layout_marginLeft="22dp"
	    android:text="@string/startService"
	    />
    <Button 
        android:id="@+id/bt2"
        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="22dp"
         android:layout_marginLeft="22dp"
         android:text="@string/startThread"/>
    
    <TextView 
        android:id="@+id/delaytime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="22dp"
        android:text="@string/delaytime"
        />
    <TextView 
        android:id="@+id/count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="22dp"
        android:text="未发送的运行信息条数"
        />
    

</LinearLayout>
